--- a/project/taskweaver_config.json
+++ b/project/taskweaver_config.json
@@ -1,5 +1,7 @@
 {
-  "llm.api_base": "https://api.openai.com/v1",
-  "llm.api_key": "",
-  "llm.model": "gpt-4-1106-preview"
+  "llm.api_base": "https://api.deepseek.com",
+  "llm.api_key": "sk-13b88e3a2e2d44398eb928e84dfef13a",
+  "llm.model": "deepseek-chat",
+  "llm.response_format": "text",
+  "llm.top_p": 1
 }
